# medical-chatbot

./: .gitignore  README.md  create_memory_for_llm.py  medibot.py  pyproject.toml  retrieval_qa.ipynb  retrieval_qa.py
.ipynb_checkpoints/: creating_memory_for_llm-checkpoint.ipynb
